--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,7 +39,8 @@ button {
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
+  font-family: "Roboto Condensed", sans-serif;
+  text-transform: uppercase;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
