--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -884,6 +884,8 @@
   min-width: 140px;
   max-width: 220px;
   text-transform: uppercase;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 400;
 }
 
 .view-list-select:hover,
